[package]
name = "cdns"
description = "Concurrent DNS-over-Https resolver."
version = "0.10.1"
authors = ["Fang He <hf.enigma@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ahash = { version = "0.8", features = ["serde"] }
quick_cache = "0.6"
dashmap = "6.1"

futures = "0.3"
url = { version = "2.5", features = ["serde"] }
hickory-proto = "0.25"
reqwest = { version = "0.13", features = ["stream"] }
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "sync",
    "net",
    "macros",
    "time",
] }
bytes = "1.11"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
